removed borders and fixed loading screen spacing

--- a/src/styles/Title.scss
+++ b/src/styles/Title.scss
@@ -7,8 +7,9 @@ body {
 }
 
 .titleContainer {
-	max-width: 100vw;
-	
+	width: 100vw;
+	height: 100%;
+	position: absolute;
 	z-index: -10;
 }
 
@@ -66,7 +67,7 @@ body {
 	@extend %flex-display;
 	flex-direction: column;
 	z-index: 0;
-	height: 75%;
+	min-height: 75%;
 	position: fixed;
 	
 }
@@ -82,39 +83,39 @@ body {
 	margin: 0;
 	&.a {
 		animation: forZoom 0.5s 10s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 	&.b {
 		animation: forZoom 1s 11s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 	&.c {
 		animation: forZoom 1s 12s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 	&.d {
 		animation: forZoom 1s 13s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 	&.e {
 		animation: forZoom 1s 14s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 	&.f {
 		animation: forZoom 0.5s 15s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 	&.g {
 		animation: forZoom 0.5s 16s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 	&.h {
 		animation: forZoom 0.5s 16.5s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 	&.i {
 		animation: forZoom 0.5s 17s forwards, pulse 1s infinite,
-			colorChangeMid 4s step-end infinite;
+			colorChange 4s step-end infinite;
 	}
 }
 
